# MRpp

./: CMakeLists.txt  LICENSE  main.cpp
include/: worker.hpp
src/: CMakeLists.txt  worker.cpp
src/client/: mr_library_client.cpp
